<resources>
    <string name="app_name">ListCar</string>
    <string name="menu">Menu</string>
    <string name="save">Save</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="specifications">Specifications</string>
    <string name="price">Price</string>
    <string name="ruble" translatable="false">₽</string>
    <string name="fab" translatable="false">FAB</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="search">Search</string>
    <string name="sort_by_price_decrease">Sort by price decrease ↓</string>
    <string name="sort_by_price_increase">Sort by price increase ↑</string>
    <string name="fill_in_all_fields">It is necessary to fill in all fields</string>
    <string name="decrease">Decrease ↓</string>
    <string name="increase">Increase ↑</string>
    <string name="show_brand">Show all cars of this brand</string>
    <string name="show_model">Show all cars of this model</string>
    <string name="sorted">Sorted</string>
    <string name="show_increase">Show all cars in ascending order of price</string>
    <string name="show_decrease">Show all cars in descending order of price</string>
    <string name="logo">Logo</string>
    <string name="list_car">List car</string>
    <string name="create_update">Create or Update car</string>
    <string name="filter">Filter</string>
    <string name="enter_the_correct_price">Please enter the correct price</string>

</resources>