<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_start_8">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/brand_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_start_8"
            android:hint="@string/brand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/brand_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorOnPrimary"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/model_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_start_8"
            android:hint="@string/model"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brand_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/model_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorOnPrimary"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/specifications_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_start_8"
            android:hint="@string/specifications"
            app:layout_constraintBottom_toTopOf="@+id/price_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/model_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/specifications_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorOnPrimary"
                android:inputType="number"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_start_8"
            android:hint="@string/price"
            app:layout_constraintBottom_toTopOf="@+id/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/specifications_label"
            app:prefixText="@string/ruble"
            app:startIconDrawable="@drawable/ruble">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorOnPrimary"
                android:inputType="number"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
