<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CarFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?attr/colorSecondary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_button_min_size_48">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_label"
            android:layout_width="@dimen/attachment_size_200"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_start_8"
            app:startIconDrawable="@drawable/ic_search_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorOnPrimary"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_sorted"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing_16"
            android:contentDescription="@string/sorted"
            app:icon="@drawable/ic_sorted_24"
            android:text="@string/price"
            android:textColor="?attr/colorPrimaryDark"
            app:iconPadding="@dimen/padding_start_8"
            app:iconTint="?attr/colorPrimaryDark"
            android:layout_marginEnd="@dimen/fab_margin_24"
            app:iconGravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/card_car" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/fab"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="?attr/colorPrimaryDark" />

</androidx.constraintlayout.widget.ConstraintLayout>